Fix letter spacing

--- a/app/assets/stylesheets/components/_btn.pcss
+++ b/app/assets/stylesheets/components/_btn.pcss
@@ -1,5 +1,5 @@
 .btn {
-  @apply h-14 bg-white text-black text-center text-base font-extrabold tracking-normal rounded-normal
+  @apply h-14 bg-white text-black text-center text-base font-extrabold tracking-tightest rounded-normal
     cursor-pointer outline-none;
 
   &:active {
