--- a/app/assets/stylesheets/components/_form.pcss
+++ b/app/assets/stylesheets/components/_form.pcss
@@ -6,12 +6,12 @@
 
   &__label {
     @apply h-5;
-    @apply text-white text-sm font-extrabold tracking-wide;
+    @apply text-white text-sm font-extrabold tracking-tighter;
   }
 
   &__control {
     @apply h-14 mt-2 px-3;
-    @apply text-white text-base font-normal tracking-normal;
+    @apply text-white text-base font-normal tracking-tightest;
     @apply bg-white-180;
     @apply rounded-normal outline-none border border-transparent cursor-text;
 
