--- a/app/assets/stylesheets/components/_message.pcss
+++ b/app/assets/stylesheets/components/_message.pcss
@@ -9,11 +9,11 @@
   }
 
   &__title {
-    @apply font-bold text-white text-sm tracking-wide;
+    @apply font-bold text-white text-sm tracking-tighter;
   }
 
   &__item {
-    @apply text-white-600 text-xs tracking-wider;
+    @apply text-white-600 text-xs tracking-tight;
   }
 
   &__list-icon {
