--- a/app/assets/stylesheets/layouts/_devise.pcss
+++ b/app/assets/stylesheets/layouts/_devise.pcss
@@ -32,7 +32,7 @@
 
     &__description {
       @apply h-6 mt-6;
-      @apply text-center text-white-600 text-base font-normal tracking-normal;
+      @apply text-center text-white-600 text-base font-normal tracking-tightest;
     }
 
     &__content {
